syntax = "proto3";

option csharp_namespace = "gRPCTest.Protos";

service User
{
	rpc Get(GetUserRequest)returns(UserProDto);
    rpc Post(CreateUserRequest) returns(UserCreateResultProtoDto);
    rpc Put(UpdateUserRequest) returns(UserUpdateResultProtoDto);
    rpc Delete(DeleteUserRequest) returns(DeleteUserResponse);
}
message GetUserRequest
{
	string id = 1; 
}
message UserProDto
{
		string id =1;
        string createDate = 2 ;
        string updateDate = 3;
        string name = 4;
        string document = 5;
        int32 age = 6;
        string companyOrPerson = 7;
}
message CreateUserRequest
{
        string name = 1;
        string document = 2;
        int32 age = 3;
        string companyOrPerson = 4;
}
message UserCreateResultProtoDto
{
        string id =1;
        string createDate = 2 ;
        string name = 3;
        string document = 4;
        int32 age = 5;
        string companyOrPerson = 6;
}
message UpdateUserRequest
{
        string id =1;
        string name = 3;
        string document = 4;
        int32 age = 5;
        string companyOrPerson = 6;
}
message UserUpdateResultProtoDto
{
        string id =1;
        string updateDate = 2 ;
        string name = 3;
        string document = 4;
        int32 age = 5;
        string companyOrPerson = 6;
} 
message DeleteUserRequest
{
    string id = 1; 
}
message DeleteUserResponse
{
    bool success = 1;
}